Changed Menu Bar, Added Logout and others

--- a/public/styles/colors.scss
+++ b/public/styles/colors.scss
@@ -1,4 +1,3 @@
-
 $primary: #2196f3;
 $primary-dark: #1565c0;
 
@@ -11,3 +10,9 @@ $admin-type: #a5d6a7;
 $admin-type-dark: #4caf50;
 $student-type: #ffab91;
 $student-type-dark: #f4511e;
+
+$success-color-dark: #43a047;
+$success-color-light: #81c784;
+
+$failure-color-dark: #e53935;
+$failure-color-light: #e57373;
