Fixed Some Issues

--- a/public/styles/colors.scss
+++ b/public/styles/colors.scss
@@ -16,3 +16,12 @@ $success-color-light: #81c784;
 
 $failure-color-dark: #e53935;
 $failure-color-light: #e57373;
+
+$light-border: #d3d3d3;
+$hover-shadow: #d4d4d4;
+$light-color: white;
+$light-text: grey;
+$dark-text: black;
+$body-bg: #f4f4f4;
+$progress-bg: #00000050;
+$pending-color: orange;
