--- a/src/styles.scss
+++ b/src/styles.scss
@@ -216,6 +216,144 @@ body {
     }
 }
 
+.chat-sidebar-wrapper {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: $card-shadow;
+    padding-right: 0px;
+}
+
+.chat-sidebar {
+    height: 70vh;
+    padding: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    .recent-chat-item {
+        padding: 10px 5px;
+        text-align: left;
+        align-items: center;
+
+        img {
+            width: 100%;
+        }
+
+        .last-message {
+            color: grey;
+            font-size: small;
+        }
+
+        hr {
+            margin-bottom: 0px;
+            margin-top: 10px;
+            color: $light-border;
+        }
+    }
+
+    .recent-chat-item.unread {
+        font-weight: bold;
+        font-size: large;
+    }
+}
+
+.chat-window {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: $card-shadow;
+    height: 70vh;
+
+    .chat-window-header {
+        display: flex;
+        padding: 10px 20px;
+        align-items: center;
+        border-bottom: 1px $light-border solid;
+        justify-content: space-between;
+        height: 15%;
+
+        .chat-header-actions {
+            i {
+                font-size: large;
+                color: $dark-text;
+                font-weight: bold;
+            }
+
+            i.block-icon {
+                color: $failure-color-light;
+            }
+        }
+
+        .chat-user-info {
+            display: flex;
+            align-items: center;
+            img {
+                height: 40px;
+                width: 40px;
+                margin-right: 20px;
+            }
+        }
+    }
+
+    .chat-messages-window {
+        height: 75%;
+        display: flex;
+        align-items: flex-end;
+
+        .messages-wrapper {
+            padding: 10px;
+            width: 100%;
+            max-height: 100%;
+            overflow-y: scroll;
+
+            .single-message {
+                padding: 10px 15px;
+                border-radius: 30px;
+                margin-bottom: 10px;
+                clear: both;
+                max-width: 70%;
+            }
+
+            .single-message.own {
+                background-color: $primary;
+                float: right;
+                color: white;
+            }
+
+            .single-message.other {
+                background-color: rgb(226, 226, 226);
+                float: left;
+            }
+        }
+    }
+
+    .chat-send-message-window {
+        height: 10%;
+        padding: 0;
+        // position: absolute;
+        vertical-align: bottom;
+        bottom: 0;
+        input {
+            height: 40px;
+            display: inline-block;
+            margin: 0;
+            width: 85%;
+            margin-right: 2%;
+            border: 1px solid rgb(192, 192, 192);
+            border-radius: 30px;
+            padding: 5px 10px;
+        }
+
+        button {
+            height: 40px;
+            display: inline-block;
+            border-radius: 50%;
+            background-color: $primary;
+            border: 0px;
+            width: 35px;
+            height: 35px;
+            color: white;
+        }
+    }
+}
+
 .form-card {
     background: $light-color;
     box-shadow: $card-shadow;
@@ -670,7 +808,11 @@ body {
     position: fixed;
     width: 24%;
     height: 100vh;
+}
 
+.sidebar-wrapper,
+.chat-sidebar-wrapper,
+.chat-messages-window {
     ::-webkit-scrollbar {
         width: 8px;
     }
