--- a/src/styles.scss
+++ b/src/styles.scss
@@ -779,11 +779,13 @@ body {
     }
 }
 
-.add-post-dialog {
-    width: 70%;
+.add-post-dialog,
+.post-job-dialog {
+    width: 30%;
 }
 
-.add-post-dialog-wrapper {
+.add-post-dialog-wrapper,
+.post-job-dialog-wrapper {
     padding-top: 20px;
 }
 
@@ -971,7 +973,15 @@ body {
 
     p.job-poster {
         color: grey;
-        font-weight: bold;
+
+        i {
+            margin-left: 15px;
+            margin-right: 5px;
+        }
+
+        i.first {
+            margin-left: 0px;
+        }
     }
 
     .job-icon i {
@@ -987,7 +997,7 @@ body {
     }
 
     .job-budget {
-        font-size: xx-large;
+        font-size: larger;
         font-weight: bolder;
         text-align: right;
 
@@ -1045,6 +1055,140 @@ body {
             margin: 0;
         }
 
+    }
+}
+
+.post-job-component {
+
+    .p-editor-content .ql-editor {
+        min-height: 200px;
+    }
+
+    .btn-row {
+        i.fas {
+            margin-right: 10px;
+        }
+    }
+
+    .p-float-label>label {
+        left: 1.4rem;
+    }
+
+}
+
+.job-detail-component {
+    p {
+        margin: 0;
+    }
+
+    p.job-title {
+        margin: 0;
+        font-size: x-large;
+        font-weight: bold;
+    }
+
+    p.job-poster {
+        font-size: small;
+        color: grey;
+        font-weight: bold;
+    }
+
+    .job-info-header {
+        margin-bottom: 30px;
+    }
+
+    .app-card.job-info-card {
+        padding: 20px 30px;
+    }
+
+    .job-info-features {
+        margin-bottom: 30px;
+    }
+
+    .job-info-details {
+        text-align: left;
+        font-size: medium;
+
+        p {
+            // margin: 0;
+            margin-bottom: 10px;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-size: medium;
+        }
+    }
+
+    p.job-feature {
+        font-size: 14px;
+        color: grey;
+        padding: 5px;
+
+
+        i {
+            margin-right: 10px;
+        }
+
+        span {
+            font-weight: bold;
+        }
+    }
+
+    p.sidebar-heading {
+        font-size: x-large;
+        padding: 10px;
+        margin-bottom: 20px;
+        font-weight: bold;
+    }
+
+
+    .already-placed-bid {
+        i {
+            font-size: xxx-large;
+            color: $success-color-dark;
+            margin-bottom: 20px;
+        }
+
+        p.already-placed-heading {
+            font-size: larger;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        p.already-placed-description {
+            font-size: small;
+            color: grey;
+            margin-bottom: 30px;
+        }
+    }
+
+    .single-bid {
+        padding: 10px;
+    }
+
+    p.bidderName {
+        font-weight: bold;
+    }
+
+    p.needed-days {
+        font-size: small;
+        color: grey;
+    }
+
+    p.bid-budget {
+        text-align: right;
+        font-size: small;
+
+        span {
+
+            font-weight: bold;
+            font-size: large;
+        }
     }
 }
 
@@ -1131,6 +1275,7 @@ body {
     height: 100vh;
 }
 
+.custom-scrollbar,
 .sidebar-wrapper,
 .chat-sidebar-wrapper,
 .chat-messages-window {
@@ -1507,7 +1652,8 @@ p {
     text-align: left;
 }
 
-p.center {
+p.center,
+.text-center {
     text-align: center;
 }
 
